# rust-feed-ingestor

./: .gitignore  Cargo.toml  Config.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  cybersecurity_feeds.md  docker-compose.yml  postgrest.conf  prometheus.yml  severity_count.json
.cargo/: audit.toml  deny.toml
.github/worflows/: ci
.github/workflows/: ci.yml
migrations/: 20250425_create_tables.sql  20250525_add_uuid_and_unique_guid.sql  20250526_create_views_for_feed_qa.sql
src/: browser.rs  config.rs  db_utils.rs  error.rs  errors.rs  ingestor.rs  lib.rs  main.rs  metrics.rs
