[package]
name = "rust_feed_ingestor"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Modular OSINT feed ingestor with Prometheus metrics"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "gzip"] }
feed-rs = "0.6"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls", "macros"] }
config = "0.13"
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
prometheus = "0.14"
hyper = { version = "0.14", features = ["full"] }
once_cell = "1.17"
anyhow = "1.0"
# For durations in Config.toml
humantime = "2.1"