# ─────────────────────────────────────────────────────────────────────────────
# Project: Rust OSINT Feed Ingestor
# A best-practice, secure-by-default Rust service for ingesting RSS/Atom feeds into
# PostgreSQL, with Prometheus metrics, structured tracing, and SQLx-powered migrations.
# ─────────────────────────────────────────────────────────────────────────────

[package]
name        = "rust_feed_ingestor"
version     = "0.2.0"
edition     = "2021"
authors     = ["Mike Harris <mike@tigerblue.tech>"]
description = "Modular OSINT feed ingestor with Prometheus metrics and SQLx migrations"
license     = "MIT OR Apache-2.0"
repository  = "https://github.com/miketigerblue/rust-osint-feed-ingestor"
readme      = "README.md"

# ─────────────────────────────────────────────────────────────────────────────
# Dependencies
# ─────────────────────────────────────────────────────────────────────────────
[dependencies]
# Async runtime
tokio               = { version = "1", features = ["full"] }

# HTTP client + feed parsing
reqwest             = { version = "0.11", features = ["json", "gzip"] }
feed-rs             = "0.6"

ammonia = "3"
# HTML sanitization

url = "2.3"


# Database access + migrations

sqlx                = { version = "0.8.1", default-features = false, features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono", "migrate"] }

# Duration parsing + Serde glue
humantime           = "2.2.0"
humantime-serde     = "1.1"

# Configuration (TOML + env)
config              = "0.13"

# (De)serialization
serde               = { version = "1.0", features = ["derive"] }
serde_json         = "1.0"

# Error types
thiserror           = "1.0"

# Structured logging/tracing
tracing             = "0.1"
tracing-subscriber  = { version = "0.3", features = ["fmt","env-filter"] }

# Metrics
prometheus          = "0.14"

# Embedded HTTP server for /metrics and /healthz
hyper               = { version = "0.14", features = ["full"] }

# Lazy-static support
once_cell           = "1.17"

# Convenient error propagation
anyhow              = "1.0"

# Chrono date/time types (with Serde support)
chrono              = { version = "0.4", features = ["serde"] }
futures = "0.3.31"
htmlescape = "0.3.1"

# ─────────────────────────────────────────────────────────────────────────────
# Dev-dependencies (for testing)
# ─────────────────────────────────────────────────────────────────────────────
[dev-dependencies]
tokio-test          = "0.4"
